# MegaTinyEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
MegaTinyEngine/: Animation.h  AnimationManager.cpp  AnimationManager.h  Base.cpp  Base.h  Button.cpp  Button.h  CMakeLists.txt  Camera.cpp  Camera.h  Core.cpp  Core.h  GameObject.cpp  GameObject.h  IGame.h  InputManager.cpp  InputManager.h  KinematicBody.cpp  KinematicBody.h  Layer.cpp  Layer.h  Rect.h  Scene.cpp  Scene.h  Settings.cpp  Settings.h  Sprite.cpp  Sprite.h  SpriteFrame.h  TextNode.cpp  TextNode.h  Texture.cpp  Texture.hpp  TextureCache.cpp  TextureCache.h
MegaTinyEngine/Actions/: Action.cpp  Action.h  ActionManager.cpp  ActionManager.h  Destroy.cpp  Destroy.h  DestroyAction.cpp  DestroyAction.h  Easings.cpp  Easings.h  Fade.cpp  Fade.h  FadeAction.cpp  FadeAction.h  Move.cpp  Move.h  MoveAction.cpp  MoveAction.h  Repeat.cpp  Repeat.h  RepeatAction.cpp  RepeatAction.h  Scale.cpp  Scale.h  Sequence.cpp  Sequence.h  actions.md
MegaTinyEngine/Collision/: BoxCollider.cpp  BoxCollider.h  CollisionInfo.cpp  CollisionInfo.h  CollisionManager.cpp  CollisionManager.h
MegaTinyEngine/GameObjects/: Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  Layer.cpp  Layer.h  Sprite.cpp  Sprite.h  TextNode.cpp  TextNode.h
MegaTinyEngine/Resources/: JSONSerialization.h  ResourceFile.h  ResourceLoader.cpp  ResourceLoader.h  ResourcePathUtils.cpp  ResourcePathUtils.h
MegaTinyEngine/UI/: Button.cpp  Button.h  FontDefinition.h  FontManager.cpp  FontManager.h  UIManager.cpp  UIManager.h
examples/: CMakeLists.txt  example_animation.cpp  example_basic.cpp  example_game.cpp  example_layers.cpp  example_text.cpp
examples/actions/: example_actions.cpp
examples/animation/: example_animation.cpp
examples/basic/: example_basic.cpp
examples/collision/: example_collision.cpp
examples/game/: example_game.cpp
examples/game/gfx/: sketch.ase  ufo.ase
examples/layers/: example_layers.cpp
examples/resources/: arcade_platformerV2.json  slime_stand.json
examples/text/: example_text.cpp
